build/log/idf_py_stdout_output_6560
[1/9] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D D:\Projects\Data_LoggerESP32\Current\Data_Logger\build\bootloader\esp-idf\esptool_py && C:\Users\DELL\esp\Espressif\python_env\idf5.1_py3.11_env\Scripts\python.exe C:/Users/DELL/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 D:/Projects/Data_LoggerESP32/Current/Data_Logger/build/bootloader/bootloader.bin"
Bootloader binary size 0x6810 bytes. 0x7f0 bytes (7%) free.
[2/7] Building CXX object esp-idf/MCP23017/CMakeFiles/__idf_MCP23017.dir/mcp23017.cpp.obj
FAILED: esp-idf/MCP23017/CMakeFiles/__idf_MCP23017.dir/mcp23017.cpp.obj 
ccache C:\Users\DELL\esp\Espressif\tools\xtensa-esp32-elf\esp-12.2.0_20230208\xtensa-esp32-elf\bin\xtensa-esp32-elf-g++.exe -DESP_PLATFORM -DIDF_VER=\"v5.1-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -ID:/Projects/Data_LoggerESP32/Current/Data_Logger/build/config -ID:/Projects/Data_LoggerESP32/Current/Data_Logger/components/MCP23017 -IC:/Users/DELL/esp/esp-idf/components/newlib/platform_include -IC:/Users/DELL/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/Users/DELL/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Users/DELL/esp/esp-idf/components/freertos/esp_additions/include/freertos -IC:/Users/DELL/esp/esp-idf/components/freertos/esp_additions/include -IC:/Users/DELL/esp/esp-idf/components/freertos/esp_additions/arch/xtensa/include -IC:/Users/DELL/esp/esp-idf/components/esp_hw_support/include -IC:/Users/DELL/esp/esp-idf/components/esp_hw_support/include/soc -IC:/Users/DELL/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -IC:/Users/DELL/esp/esp-idf/components/esp_hw_support/port/esp32/. -IC:/Users/DELL/esp/esp-idf/components/esp_hw_support/port/esp32/private_include -IC:/Users/DELL/esp/esp-idf/components/heap/include -IC:/Users/DELL/esp/esp-idf/components/log/include -IC:/Users/DELL/esp/esp-idf/components/soc/include -IC:/Users/DELL/esp/esp-idf/components/soc/esp32 -IC:/Users/DELL/esp/esp-idf/components/soc/esp32/include -IC:/Users/DELL/esp/esp-idf/components/hal/esp32/include -IC:/Users/DELL/esp/esp-idf/components/hal/include -IC:/Users/DELL/esp/esp-idf/components/hal/platform_port/include -IC:/Users/DELL/esp/esp-idf/components/esp_rom/include -IC:/Users/DELL/esp/esp-idf/components/esp_rom/include/esp32 -IC:/Users/DELL/esp/esp-idf/components/esp_rom/esp32 -IC:/Users/DELL/esp/esp-idf/components/esp_common/include -IC:/Users/DELL/esp/esp-idf/components/esp_system/include -IC:/Users/DELL/esp/esp-idf/components/esp_system/port/soc -IC:/Users/DELL/esp/esp-idf/components/esp_system/port/include/private -IC:/Users/DELL/esp/esp-idf/components/xtensa/include -IC:/Users/DELL/esp/esp-idf/components/xtensa/esp32/include -IC:/Users/DELL/esp/esp-idf/components/lwip/include -IC:/Users/DELL/esp/esp-idf/components/lwip/include/apps -IC:/Users/DELL/esp/esp-idf/components/lwip/include/apps/sntp -IC:/Users/DELL/esp/esp-idf/components/lwip/lwip/src/include -IC:/Users/DELL/esp/esp-idf/components/lwip/port/include -IC:/Users/DELL/esp/esp-idf/components/lwip/port/freertos/include -IC:/Users/DELL/esp/esp-idf/components/lwip/port/esp32xx/include -IC:/Users/DELL/esp/esp-idf/components/lwip/port/esp32xx/include/arch -IC:/Users/DELL/esp/esp-idf/components/driver/include -IC:/Users/DELL/esp/esp-idf/components/driver/deprecated -IC:/Users/DELL/esp/esp-idf/components/driver/analog_comparator/include -IC:/Users/DELL/esp/esp-idf/components/driver/dac/include -IC:/Users/DELL/esp/esp-idf/components/driver/gpio/include -IC:/Users/DELL/esp/esp-idf/components/driver/gptimer/include -IC:/Users/DELL/esp/esp-idf/components/driver/i2c/include -IC:/Users/DELL/esp/esp-idf/components/driver/i2s/include -IC:/Users/DELL/esp/esp-idf/components/driver/ledc/include -IC:/Users/DELL/esp/esp-idf/components/driver/mcpwm/include -IC:/Users/DELL/esp/esp-idf/components/driver/parlio/include -IC:/Users/DELL/esp/esp-idf/components/driver/pcnt/include -IC:/Users/DELL/esp/esp-idf/components/driver/rmt/include -IC:/Users/DELL/esp/esp-idf/components/driver/sdio_slave/include -IC:/Users/DELL/esp/esp-idf/components/driver/sdmmc/include -IC:/Users/DELL/esp/esp-idf/components/driver/sigma_delta/include -IC:/Users/DELL/esp/esp-idf/components/driver/spi/include -IC:/Users/DELL/esp/esp-idf/components/driver/temperature_sensor/include -IC:/Users/DELL/esp/esp-idf/components/driver/touch_sensor/include -IC:/Users/DELL/esp/esp-idf/components/driver/twai/include -IC:/Users/DELL/esp/esp-idf/components/driver/uart/include -IC:/Users/DELL/esp/esp-idf/components/driver/usb_serial_jtag/include -IC:/Users/DELL/esp/esp-idf/components/driver/touch_sensor/esp32/include -IC:/Users/DELL/esp/esp-idf/components/esp_pm/include -IC:/Users/DELL/esp/esp-idf/components/esp_ringbuf/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=D:/Projects/Data_LoggerESP32/Current/Data_Logger=. -fmacro-prefix-map=C:/Users/DELL/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu++2b -fno-exceptions -fno-rtti -std=gnu++17 -MD -MT esp-idf/MCP23017/CMakeFiles/__idf_MCP23017.dir/mcp23017.cpp.obj -MF esp-idf\MCP23017\CMakeFiles\__idf_MCP23017.dir\mcp23017.cpp.obj.d -o esp-idf/MCP23017/CMakeFiles/__idf_MCP23017.dir/mcp23017.cpp.obj -c D:/Projects/Data_LoggerESP32/Current/Data_Logger/components/MCP23017/mcp23017.cpp
D:/Projects/Data_LoggerESP32/Current/Data_Logger/components/MCP23017/mcp23017.cpp: In function 'void read_data()':
D:/Projects/Data_LoggerESP32/Current/Data_Logger/components/MCP23017/mcp23017.cpp:344:37: error: 'I2C_MASTER_NUM' was not declared in this scope; did you mean 'I2C_MASTER_NACK'?
  344 |     esp_err_t ret = read_accel_data(I2C_MASTER_NUM, 0x28, reg_data, sizeof(reg_data)); // Read from the OUT_X_L register
      |                                     ^~~~~~~~~~~~~~
      |                                     I2C_MASTER_NACK
D:/Projects/Data_LoggerESP32/Current/Data_Logger/components/MCP23017/mcp23017.cpp:344:15: warning: unused variable 'ret' [-Wunused-variable]
  344 |     esp_err_t ret = read_accel_data(I2C_MASTER_NUM, 0x28, reg_data, sizeof(reg_data)); // Read from the OUT_X_L register
      |               ^~~
D:/Projects/Data_LoggerESP32/Current/Data_Logger/components/MCP23017/mcp23017.cpp: At global scope:
D:/Projects/Data_LoggerESP32/Current/Data_Logger/components/MCP23017/mcp23017.cpp:324:18: warning: 'esp_err_t read_accel_data(i2c_port_t, uint8_t, uint8_t*, size_t)' defined but not used [-Wunused-function]
  324 | static esp_err_t read_accel_data(i2c_port_t i2c_num, uint8_t reg, uint8_t* data, size_t size) {
      |                  ^~~~~~~~~~~~~~~
D:/Projects/Data_LoggerESP32/Current/Data_Logger/components/MCP23017/mcp23017.cpp:11:20: warning: 'TAG' defined but not used [-Wunused-variable]
   11 | static const char* TAG = "LIS3DHTR";
      |                    ^~~
ninja: build stopped: subcommand failed.
